--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,9 @@
       
     -->
 
+    <div id="paymentBrick_container">
+    </div>
+
     <script>
       const mp = new MercadoPago('APP_USR-7ccdd71d-8235-436e-b44a-bfa6aa1c05ea', {
         locale: 'pt'
